--- a/css/estilos.css
+++ b/css/estilos.css
@@ -34,16 +34,6 @@ body header {
           background-color: grey;
           box-shadow: 3px 3px; }
 
-body main h1.nuestrostrabajos {
-  font-family: 'Raleway', sans-serif;
-  font-size: 2em; }
-
-body main div {
-  width: 100vh; }
-
-body main form {
-  background-color: grey; }
-
 body main section {
   display: flex;
   flex-direction: row;
@@ -57,8 +47,7 @@ body main section {
     padding: 20px;
     box-shadow: 6px 6px; }
     body main section div.info h1 {
-      margin: 10px;
-      font-family: 'Raleway', sans-serif; }
+      margin: 10px; }
     body main section div.info p {
       max-widht: 300px;
       margin: 20px 10 px;
